<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/ic_baseline_local_movies_24"
        android:title="@string/movies" />

    <item
        android:id="@+id/tvShowsFragment"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/favorites" />

</menu>