<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimaryDark"
	tools:context=".ui.content.movies.MoviesFragment">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rv_movies"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:paddingVertical="12dp"
		app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
		tools:itemCount="5"
		app:spanCount="2"
		tools:listitem="@layout/item_movie" />

</RelativeLayout>